[gd_scene load_steps=4 format=3 uid="uid://dh7klyj14bg2j"]

[ext_resource type="Script" path="res://Scenes/Monkey/monkey.gd" id="1_1pdyh"]
[ext_resource type="Texture2D" uid="uid://chra1pxctx3vh" path="res://assets/Person_1.png" id="1_ccr4d"]
[ext_resource type="Script" path="res://Scenes/Monkey/StateController.gd" id="2_80kim"]

[node name="Monkey" type="CharacterBody2D"]
input_pickable = true
script = ExtResource("1_1pdyh")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PackedVector2Array(-12, -48, -24, -35, -30, 7, -30, 24, -17, 49, 12, 49, 24, 25, 24, 6, 18, -36, 6, -48)

[node name="StateController" type="Node" parent="."]
script = ExtResource("2_80kim")

[node name="MonkeySprite" type="Sprite2D" parent="."]
scale = Vector2(6, 6)
texture = ExtResource("1_ccr4d")

[node name="MenuLocation" type="Marker2D" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
